GNOME Bugzilla – Bug 725425
pocket: initialize variables
Last modified: 2014-03-02 16:39:04 UTC
Whenever I access 'pocket' from out of totem, it immediately segfaults. iface_type=iface_type@entry=80) at gtype.c:3969 at gnome-pocket.c:723 Initializing the variables helps to not pass g_free_object() with uninitialized variables.
Created attachment 270604 [details] [review] pocket: initialize variables
Attachment 270604 [details] pushed as d4f2db6 - pocket: initialize variables