pocket: initialize variables

https://bugzilla.gnome.org/show_bug.cgi?id=725425